[gd_scene load_steps=11 format=3 uid="uid://bsjou3atd2hdk"]

[ext_resource type="Texture2D" uid="uid://bx3ma2ow43448" path="res://Sprites/Sigils/sigil13.png" id="2_5caet"]
[ext_resource type="Script" path="res://Scripts/HellSpace/ContractPage.gd" id="2_kx1ee"]
[ext_resource type="Theme" uid="uid://b84n433bjm87t" path="res://Scenes/GlobalTheme.theme" id="3_ueot4"]
[ext_resource type="Script" path="res://Scripts/HellSpace/HellSpaceContracts.gd" id="6_4dxk2"]
[ext_resource type="Texture2D" uid="uid://oxfv3a4u3wmd" path="res://Sprites/HellSpace/Arrows/hell_x1.png" id="8_y6llb"]
[ext_resource type="Texture2D" uid="uid://boc4erkclqx6p" path="res://Sprites/HellSpace/Arrows/hell_x2.png" id="9_jwl6b"]
[ext_resource type="Texture2D" uid="uid://b4fjjdjebvdx6" path="res://Sprites/HellSpace/Arrows/hell_contract_left.png" id="10_fnh8u"]
[ext_resource type="Texture2D" uid="uid://q51gt7miwylw" path="res://Sprites/HellSpace/Arrows/hell_contract_left2.png" id="11_0evx6"]
[ext_resource type="Texture2D" uid="uid://cuuv1ujb2olux" path="res://Sprites/HellSpace/soul_token.png" id="12_4xa25"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h62mh"]
bg_color = Color(1, 1, 1, 1)
corner_detail = 1

[node name="ContractMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = -1.0
offset_bottom = -1.0
script = ExtResource("6_4dxk2")

[node name="ContractPage" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 200.0
offset_top = 50.0
offset_right = 800.0
offset_bottom = 550.0
script = ExtResource("2_kx1ee")

[node name="Panel" type="Panel" parent="ContractPage"]
modulate = Color(0, 0.258824, 0.160784, 1)
layout_mode = 0
offset_right = 600.0
offset_bottom = 500.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h62mh")

[node name="Content" type="Control" parent="ContractPage"]
anchors_preset = 0
offset_left = 300.0
offset_top = 230.0
offset_right = 300.0
offset_bottom = 230.0
pivot_offset = Vector2(50.035, 50)

[node name="ContractSigil" type="Sprite2D" parent="ContractPage/Content"]
texture = ExtResource("2_5caet")

[node name="ContractName" type="Label" parent="ContractPage/Content"]
layout_mode = 2
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
offset_bottom = -175.0
theme = ExtResource("3_ueot4")
text = "The Twins"
horizontal_alignment = 1

[node name="ContractDesc" type="Label" parent="ContractPage/Content"]
layout_mode = 2
offset_left = -150.0
offset_top = 150.0
offset_right = 164.0
offset_bottom = 242.0
theme = ExtResource("3_ueot4")
text = "You no longer gain resources
Rust can purchase all resource
Unlocks the Twins as an
alternate sigil to the Packsmith (WIP)"
horizontal_alignment = 1

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 690.0
offset_top = 70.0
offset_right = 990.0
offset_bottom = 370.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("8_y6llb")
texture_pressed = ExtResource("9_jwl6b")
texture_hover = ExtResource("9_jwl6b")
texture_disabled = ExtResource("8_y6llb")
texture_focused = ExtResource("9_jwl6b")

[node name="LeftArrowButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 250.0
offset_right = 510.0
offset_bottom = 550.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("10_fnh8u")
texture_pressed = ExtResource("11_0evx6")
texture_hover = ExtResource("11_0evx6")
texture_disabled = ExtResource("10_fnh8u")
texture_focused = ExtResource("11_0evx6")

[node name="RightArrowButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 790.0
offset_top = 370.0
offset_right = 1090.0
offset_bottom = 670.0
rotation = 3.14159
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("10_fnh8u")
texture_pressed = ExtResource("11_0evx6")
texture_hover = ExtResource("11_0evx6")
texture_disabled = ExtResource("10_fnh8u")
texture_focused = ExtResource("11_0evx6")

[node name="SoulUpgradeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 290.0
offset_top = 450.0
offset_right = 370.0
offset_bottom = 530.0
text = "Upgrade"

[node name="EnterContractButton" type="Button" parent="."]
layout_mode = 0
offset_left = 690.0
offset_top = 450.0
offset_right = 770.0
offset_bottom = 530.0
text = "Enter
Contract"

[node name="SoulCountContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SoulCountSprite" type="Sprite2D" parent="SoulCountContainer"]
position = Vector2(275, 127)
scale = Vector2(0.1, 0.1)
texture = ExtResource("12_4xa25")

[node name="SoulCountLabel" type="Label" parent="SoulCountContainer"]
offset_left = 297.0
offset_top = 117.0
offset_right = 337.0
offset_bottom = 140.0
theme = ExtResource("3_ueot4")
text = "0"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="ExitButton" to="." method="_onExitPressed"]
[connection signal="pressed" from="LeftArrowButton" to="." method="toTheLeft"]
[connection signal="pressed" from="RightArrowButton" to="." method="toTheRight"]
[connection signal="pressed" from="SoulUpgradeButton" to="." method="_onSoulUpgradePressed"]
[connection signal="pressed" from="SoulUpgradeButton" to="SoulCountContainer/SoulCountLabel" method="_onSoulUpgradePressed"]
[connection signal="pressed" from="EnterContractButton" to="." method="beginContract"]
